improve syntax; fix bugs